# iato

./: CMakeLists.txt  Makefile  README.md
cmake/: FindElf.cmake
cnf/: Makefile  config.mak  iato.lds
src/: Makefile
src/clt/: CMakeLists.txt  Makefile
src/clt/iaio/: BedStg.cpp  BedStg.hpp  BobStg.cpp  BobStg.hpp  CMakeLists.txt  DetStg.cpp  DetStg.hpp  DlyStg.cpp  DlyStg.hpp  ExeStg.cpp  ExeStg.hpp  ExpStg.cpp  ExpStg.hpp  Fp1Stg.cpp  Fp1Stg.hpp  Fp2Stg.cpp  Fp2Stg.hpp  Fp3Stg.cpp  Fp3Stg.hpp  Fp4Stg.cpp  Fp4Stg.hpp  FwbStg.cpp  FwbStg.hpp  IpgStg.cpp  IpgStg.hpp  Main.cpp  Makefile  Option.cpp  Option.hpp  Processor.cpp  Processor.hpp  RegStg.cpp  RegStg.hpp  RenStg.cpp  RenStg.hpp  ResStg.cpp  ResStg.hpp  Resteer.cpp  Resteer.hpp  RotStg.cpp  (+11 more)
src/clt/iaka/: Atx.cpp  Atx.hpp  CMakeLists.txt  Eio.hpp  Emulator.cpp  Emulator.hpp  Ern.hpp  Fetcher.cpp  Fetcher.hpp  Main.cpp  Makefile  Option.cpp  Option.hpp  Rename.cpp  Rename.hpp
src/clt/iaoo/: CMakeLists.txt  CmtStg.cpp  CmtStg.hpp  DecStg.cpp  DecStg.hpp  DlyStg.cpp  DlyStg.hpp  ExeStg.cpp  ExeStg.hpp  ExpStg.cpp  ExpStg.hpp  IpgStg.cpp  IpgStg.hpp  LrnStg.cpp  LrnStg.hpp  Main.cpp  Makefile  Option.cpp  Option.hpp  PrnStg.cpp  PrnStg.hpp  Processor.cpp  Processor.hpp  RegStg.cpp  RegStg.hpp  ResStg.cpp  ResStg.hpp  Resteer.cpp  Resteer.hpp  RseLogic.cpp  RseLogic.hpp  Simulator.cpp  Simulator.hpp  SlcStg.cpp  SlcStg.hpp  Soo.hpp  Srn.hpp  Stx.cpp  WbkStg.cpp  WbkStg.hpp
src/clt/iaos/: Binary.cpp  Binary.hpp  CMakeLists.txt  Disass.cpp  Disass.hpp  Main.cpp  Makefile  Option.cpp  Option.hpp  Statistic.cpp  Statistic.hpp  Verify.cpp  Verify.hpp
src/clt/iata/: Atx.cpp  Atx.hpp  CMakeLists.txt  Filtering.cpp  Filtering.hpp  Generate.cpp  Generate.hpp  Main.cpp  Makefile  Option.cpp  Option.hpp  Printing.cpp  Printing.hpp  Prstat.cpp  Prstat.hpp  Statistic.cpp  Statistic.hpp
src/lib/: CMakeLists.txt  Makefile
src/lib/ecu/: CMakeLists.txt  Ecu.hpp  Fetcher.cpp  Fetcher.hpp  Makefile  Mapper.cpp  Mapper.hpp  Renamer.cpp  Renamer.hpp  Urn.hpp  Utx.cpp  Utx.hpp
src/lib/elf/: Abi.hpp  CMakeLists.txt  Elf.hxx  ElfArgs.cpp  ElfArgs.hpp  ElfBrk.cpp  ElfBrk.hpp  ElfBsa.cpp  ElfBsa.hpp  ElfChecker.cpp  ElfChecker.hpp  ElfEnvp.cpp  ElfEnvp.hpp  ElfExec.cpp  ElfExec.hpp  ElfImage.cpp  ElfImage.hpp  ElfInterp.cpp  ElfInterp.hpp  ElfInterp.hxx  ElfKernel.cpp  ElfKernel.hpp  ElfLoad.cpp  ElfLoad.hpp  ElfMap.cpp  ElfMap.hpp  ElfMemory.cpp  ElfMemory.hpp  ElfSection.cpp  ElfSection.hpp  ElfSegment.cpp  ElfSegment.hpp  ElfStack.cpp  ElfStack.hpp  ElfTable.cpp  ElfTable.hpp  ElfText.cpp  ElfText.hpp  Etx.cpp  Etx.hpp  (+1 more)
src/lib/isa/: Adecode.cpp  Aexecute.cpp  Aexecute.hpp  Alat.cpp  Alat.hpp  Arecode.cpp  Bdecode.cpp  Bexecute.cpp  Bexecute.hpp  Bits.cpp  Bits.hpp  Brecode.cpp  Bundle.cpp  Bundle.hpp  CMakeLists.txt  Cfm.cpp  Cfm.hpp  Checker.cpp  Checker.hpp  Config.hxx  Ctx.cpp  Ctx.hpp  Env.cpp  Env.hpp  Exception.cpp  Exception.hpp  Executable.hpp  Fdecode.cpp  Fexecute.cpp  Fexecute.hpp  Filter.cpp  Filter.hpp  Fpsr.cpp  Fpsr.hpp  Frecode.cpp  Huge.cpp  Huge.hpp  Idecode.cpp  Iexecute.cpp  Iexecute.hpp  (+74 more)
src/lib/krn/: CMakeLists.txt  KrnErrno.hxx  KrnExit.cpp  KrnExit.hpp  KrnFcntl.cpp  KrnFcntl.hpp  KrnFcntl.hxx  KrnIoctl.cpp  KrnIoctl.hpp  KrnIoctl.hxx  KrnMmap.cpp  KrnMmap.hpp  KrnMmap.hxx  KrnProc.cpp  KrnProc.hpp  KrnSig.cpp  KrnSig.hpp  KrnSig.hxx  KrnTime.cpp  KrnTime.hpp  KrnTime.hxx  KrnTypes.hxx  KrnUname.cpp  KrnUname.hpp  KrnUname.hxx  KrnUser.cpp  KrnUser.hpp  KrnUser.hxx  Makefile  SysArgs.cpp  SysArgs.hpp  Syscall.cpp  Syscall.hpp  Syscall.hxx
src/lib/mac/: Bdb.cpp  Bdb.hpp  Bimodal.cpp  Bimodal.hpp  Bpe.cpp  Bpe.hpp  Bpn.cpp  Bpn.hpp  Branch.cpp  Branch.hpp  Btb.cpp  Btb.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  CacheBlock.cpp  CacheBlock.hpp  CacheDirect.cpp  CacheDirect.hpp  Delayable.cpp  Delayable.hpp  Detect.cpp  Detect.hpp  Disperse.cpp  Disperse.hpp  Dsi.cpp  Dsi.hpp  Eib.cpp  Eib.hpp  Eiq.cpp  Eiq.hpp  Gcs.cpp  Gcs.hpp  Ghpp.cpp  Ghpp.hpp  Gshare.cpp  Gshare.hpp  Gskew.cpp  Gskew.hpp  Hazard.cpp  (+103 more)
tst/: CMakeLists.txt  Makefile
tst/clt/: Makefile
tst/clt/asm/: F10.s  Makefile  T01.s  T02.s  T03.s  T04.s  T05.s  T06.s  T07.s  T08.s  T09.s  T10.s  T11.s  T12.s  T13.s  T14.s  T15.s  xit.s
tst/clt/isa/: A01.s  A02.s  A03.s  A04.s  A05.s  A06.s  A07.s  A08.s  A09.s  A10.s  A9b.s  B01.s  B06.s  B07.s  F01.s  F02.s  F03.s  F04.s  F05.s  F06.s  F07.s  F08.s  F09.s  F10.s  F11.s  F12.s  F13.s  F14.s  F15.s  I01.s  I02.s  I03.s  I04.s  I05.s  I06.s  I07.s  I08.s  I09.s  I10.s  I11.s  (+67 more)
tst/clt/pgm/: Makefile  p_0001.c  p_0002.c  p_0003.c  p_0004.c  p_0005.c  p_0006.c  p_0007.c  p_0008.c  p_0009.c  p_0010.c  p_0011.c  p_0012.c  p_0013.c  p_0014.c  p_0015.c  p_0016.c  p_0017.c  p_0018.c
tst/lib/: CMakeLists.txt  Makefile
tst/lib/elf/: CMakeLists.txt  Makefile  t_args.cpp
tst/lib/isa/: CMakeLists.txt  Makefile  t_alat.cpp  t_bits.cpp  t_bundle.cpp  t_cfm.cpp  t_fpsr.cpp  t_huge.cpp  t_ip.cpp  t_psr.cpp  t_real.cpp  t_rid.cpp  t_umr.cpp  t_uvr.cpp
tst/lib/mac/: CMakeLists.txt  Makefile  t_cdirect.cpp
