set(SOURCES
  Ip.cpp
  Uvr.cpp
  Ctx.cpp
  Env.cpp
  Rid.cpp
  Cfm.cpp
  Pfs.cpp
  Umr.cpp
  Psr.cpp
  Rse.cpp
  Irt.cpp
  Lru.cpp
  Mrt.cpp
  Rpm.cpp
  Fpsr.cpp
  Huge.cpp
  Real.cpp
  Bits.cpp
  Stat.cpp
  Alat.cpp
  Utils.cpp
  Instr.cpp
  Bundle.cpp
  Result.cpp
  Plugin.cpp
  Record.cpp
  Tracer.cpp
  Memory.cpp
  Filter.cpp
  Segment.cpp
  Checker.cpp
  Operand.cpp
  Adecode.cpp
  Mdecode.cpp
  Idecode.cpp
  Fdecode.cpp
  Bdecode.cpp
  Xdecode.cpp
  Urecode.cpp
  Arecode.cpp
  Mrecode.cpp
  Irecode.cpp
  Frecode.cpp
  Brecode.cpp
  Xrecode.cpp
  MemLogic.cpp
  Aexecute.cpp
  Mexecute.cpp
  Iexecute.cpp
  Fexecute.cpp
  Bexecute.cpp
  Resource.cpp
  Register.cpp
  Exception.cpp
  Interrupt.cpp
)
set(HEADERS
  Aexecute.hpp
  Alat.hpp
  Bexecute.hpp
  Bits.hpp
  Bundle.hpp
  Cfm.hpp
  Checker.hpp
  Config.hxx
  Ctx.hpp
  Env.hpp
  Exception.hpp
  Executable.hpp
  Fexecute.hpp
  Filter.hpp
  Fpsr.hpp
  Huge.hpp
  Iexecute.hpp
  Instr.hpp
  InstrCode.hxx
  Intcode.hpp
  Interrupt.hpp
  Ip.hpp
  Irt.hpp
  Isa.hpp
  Limits.hxx
  Lrn.hpp
  Lru.hpp
  MemLogic.hpp
  Memory.hpp
  Mexecute.hpp
  Mrt.hpp
  Opcode.hpp
  Operand.hpp
  Pfs.hpp
  Plugin.hpp
  Psr.hpp
  Real.hpp
  Record.hpp
  Record.hxx
  Register.hpp
  Resource.hpp
  Result.hpp
  Rid.hpp
  Rpm.hpp
  Rse.hpp
  Segment.hpp
  Stat.hpp
  Stat.hxx
  Tracer.hpp
  Tracer.hxx
  Types.hpp
  Udecode.hxx
  Uexecute.hxx
  Umr.hpp
  Urecode.hxx
  Utils.hpp
  Uvr.hpp
)

add_library(iaisa ${SOURCES} ${HEADERS})
target_include_directories(iaisa PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(iaisa PUBLIC $<$<CONFIG:Debug>:DEBUG> IATO OS_LINUX _REENTRANT HAS_PTHREAD)
target_link_libraries(iaisa Elf::elf)

