set(SOURCES
  Mtx.cpp
  Ssi.cpp
  Dsi.cpp
  Rat.cpp
  Bdb.cpp
  Spb.cpp
  Rob.cpp
  Eiq.cpp
  Eib.cpp
  Iib.cpp
  Irb.cpp
  Gcs.cpp
  Trb.cpp
  Urb.cpp
  Urf.cpp
  Bpe.cpp
  Bpn.cpp
  Mbe.cpp
  Mbn.cpp
  Mob.cpp
  Stb.cpp
  Sct.cpp
  Htr.cpp
  Pht.cpp
  Btb.cpp
  Mta.cpp
  Mpr.cpp
  Mli.cpp
  Msi.cpp
  Hma.cpp
  Rib.cpp
  Slot.cpp
  Stage.cpp
  Cache.cpp
  Gskew.cpp
  Pskew.cpp
  Branch.cpp
  Gshare.cpp
  Pforce.cpp
  Pshare.cpp
  Detect.cpp
  Hazard.cpp
  System.cpp
  Bimodal.cpp
  Pimodal.cpp
  Pbmodal.cpp
  Restart.cpp
  Station.cpp
  Watchdog.cpp
  Disperse.cpp
  RseStack.cpp
  Runnable.cpp
  Pipeline.cpp
  Pipelane.cpp
  Weakable.cpp
  Delayable.cpp
  Predicate.cpp
  Scoreboard.cpp
  CacheBlock.cpp
  CacheDirect.cpp
)
set(HEADERS
  Bdb.hpp
  Bimodal.hpp
  Bpe.hpp
  Bpn.hpp
  Branch.hpp
  Btb.hpp
  Cache.hpp
  CacheBlock.hpp
  CacheDirect.hpp
  Delayable.hpp
  Detect.hpp
  Disperse.hpp
  Dsi.hpp
  Eib.hpp
  Eiq.hpp
  Gcs.hpp
  Gshare.hpp
  Gskew.hpp
  Hazard.hpp
  Hma.hpp
  Htr.hpp
  Iib.hpp
  Irb.hpp
  Mac.hpp
  Mbe.hpp
  Mbn.hpp
  MemDef.hpp
  Mli.hpp
  Mob.hpp
  Mpr.hpp
  Msi.hpp
  Mta.hpp
  Mtx.hpp
  Pbmodal.hpp
  Pforce.hpp
  Pht.hpp
  Pimodal.hpp
  Pipelane.hpp
  Pipeline.hpp
  Predicate.hpp
  Prn.hpp
  Pshare.hpp
  Pskew.hpp
  Rat.hpp
  ReqBuf.hpp
  Restart.hpp
  Rib.hpp
  Rob.hpp
  RseStack.hpp
  Runnable.hpp
  Scoreboard.hpp
  Sct.hpp
  Slot.hpp
  Spb.hpp
  Ssi.hpp
  Stage.hpp
  Station.hpp
  Stb.hpp
  System.hpp
  Trb.hpp
  Urb.hpp
  Urf.hpp
  Watchdog.hpp
  Weakable.hpp
)

add_library(iamac ${SOURCES} ${HEADERS})
target_include_directories(iamac PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(iamac PUBLIC $<$<CONFIG:Debug>:DEBUG> IATO OS_LINUX _REENTRANT HAS_PTHREAD)
target_link_libraries(iamac PUBLIC iaisa iaelf iakrn Elf::elf)

